Fixed the absent sidebar whitespace problem, when no user logged in.

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -149,6 +149,11 @@ li.nav-second-level {
 }
 
 // General
+
+.no-sidebar {
+  margin-left: 0;
+}
+
 .card-title {
   font-size: 1.5em;
   font-weight: bold;
